2010-01-30  Khanh Nguyen  <knguyen@cs.umb.edu>
	* Matlab's function: derivative securities, bkcaplet and bkfloorlet
2010-01-26  Khanh Nguyen  <knguyen@cs.umb.edu>
	* Matlab's functions: zero, treasury, convertible, certificate of deposit.
2010-01-23  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Some small cleanups

2010-01-22  Khanh Nguyen <knguyen@cs.umb.edu>

	* NAMESPACE: Added, filled with functions and methods

	* R/*Bond.R: add default values to bond functions, especially the date
	parameters (dayCounter, settlement days, compounding frequency,..)
	so that it is less confusing when using the functions.
	* man/*Bond.Rd: idem
	* New examples that use default values for bonds.

2010-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.2 which works with QuantLib 0.9.9
	  (as well as with the brand-new first beta for QuantLib 1.0.0)

	* src/Makefile.win: Keep QL 0.9.9 hard-coded until 1.0.0 is out

2010-01-14  Khanh Nguyen <knguyen@cs.umb.edu>

	* pkg/R/calendars.R: Fix generic function issue with advance

	* src/dayCounter.cpp: Added dayCounter functions
	* pkg/R/dayCounter.R: idem
	* man/dayCount.R: idem
	* man/yearFraction.R: idem
	* man/advance.R: idem

2010-01-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/asian.cpp: updated for Rcpp (>= 0.7.0), switched to explicit
	  Rf_error() and Rf_length() where needed with R_NO_REMAP defined
	* src/barrier_binary.cpp: idem
	* src/bermudan.cpp: idem
	* src/bonds.cpp: idem
	* src/discount.cpp: idem
	* src/implieds.cpp: idem
	* src/rquantlib.hpp: idem
	* src/utils.cpp: idem
	* src/vanilla.cpp: idem
	* DESCRIPTION: Depends on Rcpp (>= 0.7.0)

2010-01-12  Khanh Nguyen <knguyen@cs.umb.edu>

	* src/calendars.cpp: Add new calendaring functionality
	* src/calendars.hpp: idem
	* R/calendars.R: idem
	* man/endOfMonth.Rd: idem
	* man/isHoliday.Rd: idem
	* man/holidayList.Rd: idem
	* man/businessDaysBetwee.Rd: idem
	* man/adjust.Rd: idem
	* man/isEndOfMonth.Rd: idem
	* man/isWeekend.Rd: idem
