@@ -1,3 +1,5 @@
+2010-01-31  Khanh Nguyen  <knguyen@cs.umb.edu>
+	* Matlab's derivative securities: bkput, bkcall
 2010-01-30  Khanh Nguyen  <knguyen@cs.umb.edu>
 	* Matlab's function: derivative securities, bkcaplet and bkfloorlet
 2010-01-26  Khanh Nguyen  <knguyen@cs.umb.edu>
